--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,23 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Taskmanager</title>
+  <title>Tasks</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/styles.css"/>
+  <!--jQuery-->
+  <script type="text/javascript" src="assets/jquery.min.js"></script>
+  
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"/>
+  <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+<section id="content">
   <app-root>Loading...</app-root>
+</section>
 </body>
 </html>
